force-app/main/default/objects/Loan_Document__c/Loan_Document__c.object-meta.xml
<CustomObject>
    <label>Loan Document</label>
    <pluralLabel>Loan Documents</pluralLabel>
    <description>Tracks metadata of physical verification documents (PAN, Aadhaar, IT Returns).</description>
    <nameField>
        <label>Document Reference</label>
        <type>AutoNumber</type>
        <displayFormat>DOC-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>