force-app/main/default/objects/Loan_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <description>Category of document uploaded.</description>
    <inlineHelpText>Category of document uploaded.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAN Card</fullName>
            </value>
            <value>
                <fullName>Aadhaar Card</fullName>
            </value>
            <value>
                <fullName>Salary Slip</fullName>
            </value>
            <value>
                <fullName>IT Return</fullName>
            </value>
            <value>
                <fullName>Bank Statement</fullName>
            </value>
            <value>
                <fullName>Address Proof</fullName>
            </value>
            <value>
                <fullName>Collateral Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <required>true</required>
</CustomField>