force-app/main/default/objects/Loan_Document__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <label>Loan Application</label>
    <type>MasterDetail</type>
    <description>Parent Loan Application. Sharing inherited.</description>
    <inlineHelpText>Parent Loan Application. Sharing inherited.</inlineHelpText>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Loan Documents</relationshipLabel>
    <relationshipName>Loan_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>