force-app/main/default/objects/Loan_Document__c/fields/Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date__c</fullName>
    <label>Upload Date</label>
    <type>Date</type>
    <description>Date document was registered.</description>
    <inlineHelpText>Date document was registered.</inlineHelpText>
    <required>true</required>
    <defaultValue>TODAY()</defaultValue>
</CustomField>