force-app/main/default/objects/Loan_Document__c/fields/Verification_Comments__c.field-meta.xml
<CustomField>
    <fullName>Verification_Comments__c</fullName>
    <label>Verification Comments</label>
    <type>LongTextArea</type>
    <description>Detailed notes.</description>
    <inlineHelpText>Detailed notes.</inlineHelpText>
    <length>2000</length>
</CustomField>