force-app/main/default/objects/Loan_Document__c/fields/Verified_By_User__c.field-meta.xml
<CustomField>
    <fullName>Verified_By_User__c</fullName>
    <label>Verified By User</label>
    <type>Lookup</type>
    <description>Document Verifier who completed checks.</description>
    <inlineHelpText>Document Verifier who completed checks.</inlineHelpText>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Verified Documents</relationshipLabel>
    <relationshipName>Verified_Documents</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>