force-app/main/default/objects/Loan_Document__c/validationRules/Loan_Document_Require_Reject_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Document_Require_Reject_Comments</fullName>
    <active>true</active>
    <description>Verification Comments are mandatory when a document is marked as Rejected.</description>
    <errorConditionFormula>AND(NOT($Permission.Bypass_Validation_Rules), ISPICKVAL(Verification_Status__c, &#x27;Rejected&#x27;), ISBLANK(Verification_Comments__c))</errorConditionFormula>
    <errorDisplayField>Verification_Comments__c</errorDisplayField>
    <errorMessage>Verification Comments are mandatory when a document is marked as Rejected.</errorMessage>
</ValidationRule>